# APC524

./: .gitignore  .pre-commit-config.yaml  FDM_FVM.ipynb  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
FD/: Finite Differencing.ipynb  Finite_Differencing.ipynb  finite_differencing_functions.py
FD/.ipynb_checkpoints/: Finite Differencing-checkpoint.ipynb
FV/: finite_volume.ipynb
LBM/: Lattice_Boltzmann_Method.py
docs/: conf.py
src/navier_stokes/: __init__.py  fdm_fvm_functions.py  plotting.py
src/navier_stokes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testing/: main_code.py  performance_test.py  test_boundary_conditions.py  test_compute_second_derivative.py  test_initialize.py  test_methods.py
tests/: test_boundary_conditions.py  test_compute_second_derivative.py  test_fd.py  test_fv.py  test_initialize.py  test_methods.py  test_performance.py
